log
Wed 22 Mar 2023 01:39:22 AM UTC: 
 tests:  0|6
total_score: 0/70
f5c6886
Thu 23 Mar 2023 03:18:01 PM UTC: 
 list.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:61:3: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   61 |   lista->head=n;
      |   ^~~~~
      |   list
list.c:61:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
996deb4
Thu 23 Mar 2023 03:18:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8839c83
Thu 23 Mar 2023 03:23:31 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:39:11: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   39 |   if(!list->first) return NULL;
      |           ^~
list.c:40:21: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   40 |   list->current=list->first;
      |                     ^~
list.c:41:14: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   41 |   return(list->first->data)
      |              ^~
list.c:41:28: error: expected ‘;’ before ‘return’
   41 |   return(list->first->data)
      |                            ^
      |                            ;
   42 |     return NULL;
      |     ~~~~~~                  
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e23d6a5
Thu 23 Mar 2023 03:24:47 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
bb43fe7
Thu 23 Mar 2023 03:27:42 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
0287269
Thu 23 Mar 2023 03:30:04 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|5
total_score: 15/70
68846a0
Thu 23 Mar 2023 03:30:52 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:45:11: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   45 |   if(!list->next) return NULL;
      |           ^~
list.c:46:21: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   46 |   list->current=list->next;
      |                     ^~
list.c:47:14: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   47 |   return(list->next->data);
      |              ^~
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fbb146b
Thu 23 Mar 2023 03:31:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:45:11: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   45 |   if(!list->next) return NULL;
      |           ^~
list.c:46:21: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   46 |   list->current=list->next;
      |                     ^~
Compilation failed
a6e4abb
Thu 23 Mar 2023 03:31:27 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:46:21: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   46 |   list->current=list->next;
      |                     ^~
Compilation failed
7398f49
Thu 23 Mar 2023 03:31:34 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:46:21: error: ‘list’ is a pointer; did you mean to use ‘->’?
   46 |   list->current=list.next;
      |                     ^
      |                     ->
Compilation failed
d4893f0
Thu 23 Mar 2023 03:31:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:46:21: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   46 |   list->current=list->next;
      |                     ^~
Compilation failed
d0b8773
Thu 23 Mar 2023 03:32:35 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:46:21: error: ‘list’ is a pointer; did you mean to use ‘->’?
   46 |   list->current=list.next;
      |                     ^
      |                     ->
Compilation failed
9127769
Thu 23 Mar 2023 03:33:13 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
de377cf
Thu 23 Mar 2023 03:33:39 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
163bd71
Thu 23 Mar 2023 03:33:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
19d2527
Thu 23 Mar 2023 03:34:10 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
a91dfa4
Thu 23 Mar 2023 03:34:41 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
28f345a
Thu 23 Mar 2023 03:35:34 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
b66484e
Thu 23 Mar 2023 03:37:10 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
af967a5
Thu 23 Mar 2023 03:37:32 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
5f3699f
Thu 23 Mar 2023 03:38:45 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ab91ce4
Thu 23 Mar 2023 03:39:12 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
a731e1c
Thu 23 Mar 2023 03:39:31 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
c704577
Thu 23 Mar 2023 03:39:58 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
c212b72
Thu 23 Mar 2023 03:40:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5116bc6
Thu 23 Mar 2023 03:41:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5320d88
Thu 23 Mar 2023 03:42:11 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
26620e0
Thu 23 Mar 2023 03:42:33 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
9d94743
Thu 23 Mar 2023 03:45:45 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:55:21: error: ‘List’ {aka ‘struct List’} has no member named ‘last’
   55 |   list->current=list->last;
      |                     ^~
list.c:56:14: error: ‘List’ {aka ‘struct List’} has no member named ‘last’
   56 |   return(list->last->data);
      |              ^~
list.c:57:1: error: control reaches end of non-void function [-Werror=return-type]
   57 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5df6188
Thu 23 Mar 2023 03:46:07 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
b162ad9
Thu 23 Mar 2023 03:46:37 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:60:3: error: implicit declaration of function ‘f’ [-Werror=implicit-function-declaration]
   60 |   f(!list) return NULL;
      |   ^
list.c:60:11: error: expected ‘;’ before ‘return’
   60 |   f(!list) return NULL;
      |           ^~~~~~~
      |           ;
cc1: all warnings being treated as errors
Compilation failed
f4e1977
Thu 23 Mar 2023 03:46:49 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
f2d2e17
Thu 23 Mar 2023 03:52:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
265e724
Thu 23 Mar 2023 03:54:52 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
0b8a521
Thu 23 Mar 2023 03:58:00 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  9|3
total_score: 35/70
f992b0f
Thu 23 Mar 2023 04:00:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
22dc6fc
Thu 23 Mar 2023 04:02:43 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:68:20: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   68 |   if(!list) return NULL;
      |                    ^~~~
list.c:67:6: note: declared here
   67 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9895e63
Thu 23 Mar 2023 04:03:37 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
131211a
Thu 23 Mar 2023 04:04:23 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
88faa63
Thu 23 Mar 2023 04:04:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
a65b664
